modified:   public/login.js 	modified:   public/vote.html 	modified:   public/vote.js 	modified:   server.js

--- a/public/vote.html
+++ b/public/vote.html
@@ -13,6 +13,9 @@
       <option value="candidate3">Candidate 3</option>
     </select><br>
 
+    <!-- Add a hidden input field to store the voterID -->
+    <input type="hidden" id="voterID" value=""><br>
+
     <button type="submit">Vote</button>
   </form>
 
