Changes to be committed: 	modified:   node_modules/.package-lock.json 	new file:   node_modules/express-session/HISTORY.md 	new file:   node_modules/express-session/LICENSE 	new file:   node_modules/express-session/README.md 	new file:   node_modules/express-session/index.js 	new file:   node_modules/express-session/node_modules/cookie/HISTORY.md 	new file:   node_modules/express-session/node_modules/cookie/LICENSE 	new file:   node_modules/express-session/node_modules/cookie/README.md 	new file:   node_modules/express-session/node_modules/cookie/index.js 	new file:   node_modules/express-session/node_modules/cookie/package.json 	new file:   node_modules/express-session/package.json 	new file:   node_modules/express-session/session/cookie.js 	new file:   node_modules/express-session/session/memory.js 	new file:   node_modules/express-session/session/session.js 	new file:   node_modules/express-session/session/store.js 	new file:   node_modules/on-headers/HISTORY.md 	new file:   node_modules/on-headers/LICENSE 	new file:   node_modules/on-headers/README.md 	new file:   node_modules/on-headers/index.js 	new file:   node_modules/on-headers/package.json 	new file:   node_modules/random-bytes/HISTORY.md 	new file:   node_modules/random-bytes/LICENSE 	new file:   node_modules/random-bytes/README.md 	new file:   node_modules/random-bytes/index.js 	new file:   node_modules/random-bytes/package.json 	new file:   node_modules/uid-safe/HISTORY.md 	new file:   node_modules/uid-safe/LICENSE 	new file:   node_modules/uid-safe/README.md 	new file:   node_modules/uid-safe/index.js 	new file:   node_modules/uid-safe/package.json 	modified:   package-lock.json 	modified:   package.json 	modified:   public/index.html 	modified:   public/login.js 	modified:   public/vote.js 	modified:   server.js

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,6 +15,8 @@
 
     <button type="submit">Login</button>
   </form>
+
+  <button id="logoutBtn" style="display: none;">Logout</button> <!-- Add the logout button -->
 
   <script src="login.js"></script>
 </body>
